--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
- 
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
@@ -197,7 +197,7 @@ textarea {
   clear: both;
 }
 
- 
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -215,7 +215,7 @@ textarea {
     /* Style adjustments for high resolution devices */
 }
 
- 
+
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
@@ -290,6 +290,14 @@ textarea {
     h3 {
         page-break-after: avoid;
     }
+}
+
+body {
+  background: #222222 !important;
+}
+
+h1, h2, h3, h4, p {
+  text-align: center;
 }
 
 
